# Leonidas

./: .gitignore  .project  .styleguide  .wrproject  Autonomous.cpp  AutonomousFeed.cpp  AutonomousNothing.cpp  ButtonTracker.cpp  ButtonTracker.h  CMakeCache.txt  CMakeLists.txt  COPYING  Disabled.cpp  DriverStationDisplay.cpp  DriverStationDisplay.h  DriverStationDisplay.hpp  LICENSE.txt  LockSolenoid.cpp  LockSolenoid.hpp  Makefile  OperatorControl.cpp  OurRobot.cpp  OurRobot.h  OurRobot.hpp  PhotoEncoder.cpp  PhotoEncoder.h  PhotoEncoder.hpp  README.md  RobotSettings.txt  Settings.cpp  ShooterController.cpp  ShooterController.h  ShooterController.hpp  build.gradle  cmake_install.cmake  settings.gradle
AutonomousModes/: AutonBridge.cpp  AutonFeed.cpp  AutonShoot.cpp  Autonomous.cpp  AutonomousBridge.cpp  AutonomousFeed.cpp  AutonomousNothing.cpp
Kinect/: DriveKinect.cpp  DriveKinect.h  DriveKinect.hpp  KinectBase.cpp  KinectBase.h  KinectBase.hpp  TurretKinect.cpp  TurretKinect.h  TurretKinect.hpp
LiveGrapherHost/: graphhost.c  graphhost.h
SFMLNetwork/: CMakeLists.txt  Makefile  Packet.cpp
SFMLSystem/: CMakeLists.txt  Makefile
Subsystems/: PhotoEncoder.cpp  PhotoEncoder.hpp  Shooter.cpp  Shooter.hpp
src/: AutonContainer.inl  ButtonTracker.cpp  ButtonTracker.hpp  DriverStationDisplay.cpp  DriverStationDisplay.hpp  LockSolenoid.cpp  LockSolenoid.hpp  Robot.cpp  Robot.hpp  RollingAverage.cpp  RollingAverage.hpp  Settings.cpp  Settings.hpp  ShooterController.cpp  ShooterController.hpp
src/AutonomousModes/: AutonBridge.cpp  AutonFeed.cpp  AutonShoot.cpp
src/Kinect/: DriveKinect.cpp  DriveKinect.hpp  KinectBase.cpp  KinectBase.hpp  TurretKinect.cpp  TurretKinect.hpp
src/LiveGrapherHost/: graphhost-p.cpp  graphhost-p.hpp  graphhost.c  graphhost.h  list.c  list.h  queue.c  queue.h
src/SFMLNetwork/: Packet.cpp  Socket.cpp  UdpSocket.cpp
src/Subsystems/: PhotoEncoder.cpp  PhotoEncoder.hpp  Shooter.cpp  Shooter.hpp
(+13 files in other folders)
